--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,20 @@
+certifi==2020.4.5.1
+chardet==3.0.4
+click==7.1.1
+colorama==0.4.3
+Flask==1.1.2
+Flask-OAuthlib==0.9.5
+Flask-WTF==0.14.3
+idna==2.9
+itsdangerous==1.1.0
+Jinja2==2.11.2
 MarkupSafe==1.1.1
+oauthlib==2.1.0
+python-dateutil==2.8.1
+python-dotenv==0.13.0
+requests==2.23.0
+requests-oauthlib==1.3.0
+six==1.14.0
+urllib3==1.25.9
+Werkzeug==1.0.1
 WTForms==2.3.1
